--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
         </configuration>
         <executions>
           <execution>
-            <phase>pre-integration-test</phase>
+            <phase>pre-integration</phase>
             <goals>
               <goal>test</goal>
             </goals>
