--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
                              your SOA Quickstart or JDeveloper install directory, 
                              with "/soa" appended to it.
                     -->
-          <!--<oracleHome>JDEV_HOME</oracleHome>-->
+          <oracleHome>/var/lib/jenkins/workspace/OracleHome</oracleHome>
           <!--<soaOracleHome>JDEV_HOME/soa</soaOracleHome>-->
           <input>${input}</input>
         </configuration>
