--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,8 @@
     <composite.revision>${project.version}</composite.revision>
     <composite.partition>default</composite.partition>
     <serverUrl>http://10.193.8.24:9073</serverUrl>
-    <user>dennemag</user>
-    <password>Jolas0608</password>
+    <user>%USERNAME%</user>
+    <password>%PASSWORD%</password>
     <overwrite>true</overwrite>
     <forceDefault>true</forceDefault>
     <regenerateRulebase>false</regenerateRulebase>
